--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                         [
                             { nombre: 'Daniel', apellido: 'Sánchez', dni: 20442873, correo: 'danielsanchez68@hotmail.com' },
                             { nombre: 'Juan', apellido: 'Perez', dni: 11111111, correo: 'juanperez@hotmail.com' },
+                            { nombre: 'Florencia', apellido: 'C', dni: 22222222, correo: 'uncorreo@cflorencia.com'}
                             //Agregar aquí nombre, apellido, dni y correo en formato objeto 
+
                         ]
                 }
             },
